2008-02-19  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	Merged from trunk:

	* plug-ins/jpeg/jpeg-exif.c: correctly record dimensions when
	saving an image.  Fixes bug #517077.
	
2008-02-19  Sven Neumann  <sven@gimp.org>

	Merged from trunk:

	* plug-ins/script-fu/scripts/glossy.scm: applied patch from
	Ulf-D. Ehlert that fixes a bug in the Glossy script when used with
	a pattern instead of a gradient blend (bug #517285).

2008-02-16  Michael Natterer  <mitch@gimp.org>

	Merged from trunk:

	* app/display/gimpdisplayshell-callbacks.c
	* app/tools/gimpforegroundselecttool.c
	* app/tools/gimpimagemaptool.c
	* app/tools/gimpiscissorstool.c
	* app/tools/gimprectangletool.c
	* app/tools/gimptransformtool.c
	* app/tools/gimpvectortool.c
	* app/widgets/gimpcontainerpopup.c
	* app/widgets/gimppaletteview.c
	* libgimpwidgets/gimpcolorhexentry.c
	* libgimpwidgets/gimpnumberpairentry.c
	* plug-ins/script-fu/script-fu-console.c: Unify the handling of
	various "Enter" and "Space" keysyms all over the place. Fixes bug
	#516544 (also see gtk bug #515047).

2008-02-14  Sven Neumann  <sven@gimp.org>

	Merged from trunk:

	* app/text/gimpfont.c (gimp_font_get_sample_string): check if the
	font has the glyphs from the sample string. Fixes bug #514021.

2008-02-11  Sven Neumann  <sven@gimp.org>

	Merged from trunk:

	* libgimpthumb/Makefile.am (libgimpthumb_2_0_la_LIBADD):
	explicitly added GLIB_LIBS. Fixes bug #515566.

2008-02-05  Sven Neumann  <sven@gimp.org>

	Merged from trunk:

	* app/dialogs/image-new-dialog.c (image_new_create_image):
	use the user context when creating the new image. Fixes bug #514082.

2008-02-05  Sven Neumann  <sven@gimp.org>

	Merged from trunk:

	* plug-ins/common/mail.c (to64): fixed a bug in the base64 encoding.

2008-02-05  Sven Neumann  <sven@gimp.org>

	Merged from trunk:

	* plug-ins/common/psd-save.c (write_pixel_data): check if drawable
	is a layer before trying to access the layer mask.

2008-02-04  Sven Neumann  <sven@gimp.org>
